# mcp

./: .gitignore  .mcpbignore  README.md  build.sh  manifest.json  pyproject.toml
.github/workflows/: release.yml
src/: __init__.py  server.py
