[project]
name = "examplary-mcp"
version = "1.0.0"
description = "MCP server for Examplary exam management API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Examplary", email = "support@examplary.ai" }
]
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0"
]

[project.urls]
Homepage = "https://examplary.ai"
Repository = "https://github.com/examplary-ai/mcp"
Documentation = "https://developers.examplary.ai"
